--- a/about.html
+++ b/about.html
@@ -720,7 +720,7 @@
     <!--====== INFETECH PROMO BANNER PART ENDS ======-->
 
     <div class="infetech-cta-area">
-      <!-- <div class="container"> -->
+      <div class="container">
       <div class="row">
         <div class="col-lg-12">
           <div class="infetech-cta-box" style="background-color: #5f2dee">
@@ -769,8 +769,8 @@
           </div>
         </div>
       </div>
-      <!-- </div> -->
-    </div>
+      </div>
+      </div>
 
     <!--====== INFETECH PROMO BANNER PART ENDS ======-->
 
