--- a/index-3.html
+++ b/index-3.html
@@ -10,8 +10,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!--====== Title ======-->
-    <title>Infetech - Technology & IT Solutions HTML Template</title>
-    
+    <title>
+      Sudha Prevention Centre | Diabetes centre in bangalore +91-8026422379 |
+      welcome
+    </title>    
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
 
