--- a/gallery.html
+++ b/gallery.html
@@ -11,14 +11,17 @@
     />
 
     <!--====== Title ======-->
-    <title>Infetech - Technology & IT Solutions HTML Template</title>
-
+    <title>
+      Sudha Prevention Centre | Diabetes centre in bangalore +91-8026422379 |
+      welcome
+    </title>
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.png"
+      href="assets/logo/main-logo.png"
       type="image/png"
     />
+
 
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -696,7 +699,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-about">
-              <a href="#"><img src="assets/images/logo-white.png" alt="" /></a>
+              <a href="#"><img src="assets/logo/logo.jpeg" style="max-width: 250px;border-radius: 10px;" alt="" /></a>
               <p>
                 Since 1994, we’ve delivered trusted, comprehensive diabetes
                 care, led by Dr. Arun R Vadavi’s expert team.
