--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--====== Favicon Icon ======-->
     <link
       rel="shortcut icon"
-      href="assets/images/favicon.png"
+      href="assets/logo/main-logo.png"
       type="image/png"
     />
 
@@ -2046,7 +2046,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-about">
-              <a href="#"><img src="assets/images/logo-white.png" alt="" /></a>
+              <a href="#"><img src="assets/logo/logo.jpeg" style="max-width: 250px;border-radius: 10px;" alt="" /></a>
               <p>
                 Since 1994, we’ve delivered trusted, comprehensive diabetes
                 care, led by Dr. Arun R Vadavi’s expert team.
