--- a/about.html
+++ b/about.html
@@ -721,50 +721,52 @@
     <!--====== INFETECH TESTIMONIAL 5 PART ENDS ======-->
 
     <!--====== INFETECH PROMO BANNER PART ENDS ======-->
-
-    <div class="infetech-cta-area">
-      <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="infetech-cta-box" style="background-color: #5f2dee">
-            <div class="row">
-              <div class="col-lg-3">
-                <div class="cta-thumb">
-                  <img
-                    src="images/vijra-family-diabetic-clinic-gurgaon-5c6d2e272da1a-removebg-preview.webp"
-                    style="height: 173px; width: 173px"
-                    alt=""
-                  />
-                </div>
+    <section
+    class="infetech-fun-facts-area infetech-fun-facts-about-area"
+    style="background-color: #5f2dee"
+  >
+  <div class="infetech-cta-area">
+    <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="infetech-cta-box" style="background-color: #5f2dee">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="cta-thumb">
+                <img
+                  src="images/vijra-family-diabetic-clinic-gurgaon-5c6d2e272da1a-removebg-preview.webp"
+                  style="height: 173px; width: 173px"
+                  alt=""
+                />
               </div>
-              <div class="col-lg-9">
-                <div class="cta-content">
-                  <h2 class="title">Book An Appointment</h2>
-                  <div class="row align-items-center">
-                    <div class="col-lg-8">
-                      <ul>
-                        <li>
-                          <i class="fas fa-check-circle"></i>Simple On-Site
-                          Appointment Scheduling
-                        </li>
-                        <li>
-                          <i class="fas fa-check-circle"></i> Flexible
-                          Appointment Times
-                        </li>
-                        <li>
-                          <i class="fas fa-check-circle"></i> Instant
-                          Confirmation and Reminders
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-lg-4">
-                      <a
-                        href="https://click4appointment.com/clinic-details/sudhapreventioncentre-diabetescentre-3879"
-                        class="main-btn ml-30"
-                        style="background-color: white; color: black"
-                        >Book Appointment</a
-                      >
-                    </div>
+            </div>
+            <div class="col-lg-9">
+              <div class="cta-content">
+                <h2 class="title">Book An Appointment</h2>
+                <div class="row align-items-center">
+                  <div class="col-lg-8">
+                    <ul>
+                      <li>
+                        <i class="fas fa-check-circle"></i>Simple On-Site
+                        Appointment Scheduling
+                      </li>
+                      <li>
+                        <i class="fas fa-check-circle"></i> Flexible
+                        Appointment Times
+                      </li>
+                      <li>
+                        <i class="fas fa-check-circle"></i> Instant
+                        Confirmation and Reminders
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="col-lg-4">
+                    <a
+                      href="https://click4appointment.com/clinic-details/sudhapreventioncentre-diabetescentre-3879"
+                      class="main-btn ml-30"
+                      style="background-color: white; color: black"
+                      >Book Appointment</a
+                    >
                   </div>
                 </div>
               </div>
@@ -772,9 +774,10 @@
           </div>
         </div>
       </div>
-      </div>
-      </div>
-
+    </div>
+    </div>
+    </div>
+  </section>
     <!--====== INFETECH PROMO BANNER PART ENDS ======-->
 
     <!--====== INFETECH SPONSER PART ENDS ======-->
@@ -817,7 +820,7 @@
                 <div class="thumb">
                   <img src="assets/doctors-images/sp1.jpeg" alt="" />
                 </div>
-                <div class="content">
+                <div class="content" style="text-align: center;">
                   <h4 class="title">Ms. Divyashree P</h4>
                   <span>Digital Head </span>
                 </div>
@@ -833,7 +836,7 @@
                 <div class="thumb">
                   <img src="assets/doctors-images/sp2.jpeg" alt="" />
                 </div>
-                <div class="content">
+                <div class="content" style="text-align: center;">
                   <h4 class="title">Varshitha</h4>
                   <span>Staff Nurse </span>
                 </div>
@@ -849,7 +852,7 @@
                 <div class="thumb">
                   <img src="assets/doctors-images/sp3.jpeg" alt="" />
                 </div>
-                <div class="content">
+                <div class="content" style="text-align: center;">
                   <h4 class="title">Pushpa Vishwanath</h4>
                   <span>Patient Educator </span>
                 </div>
@@ -865,7 +868,7 @@
                 <div class="thumb">
                   <img src="assets/doctors-images/sp4.jpeg" alt="" />
                 </div>
-                <div class="content">
+                <div class="content" style="text-align: center;">
                   <h4 class="title">Anusha H</h4>
                   <span>Patient Educator </span>
                 </div>
@@ -881,7 +884,7 @@
                 <div class="thumb">
                   <img src="assets/doctors-images/sp5.jpeg" alt="" />
                 </div>
-                <div class="content">
+                <div class="content" style="text-align: center;">
                   <h4 class="title">Mamatha Chandrashekar Holla</h4>
                   <span>Accountant</span>
                 </div>
@@ -926,7 +929,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-about">
-              <a href="#"><img src="assets/logo/logo.jpeg" style="max-width: 250px;border-radius: 10px;" alt="" /></a>
+              <a href="#"><img src="assets/logo/logo.jpeg" style="border-radius: 10px;" alt="" /></a>
               <p>
                 Since 1994, we’ve delivered trusted, comprehensive diabetes
                 care, led by Dr. Arun R Vadavi’s expert team.
