--- a/doctors.html
+++ b/doctors.html
@@ -112,10 +112,22 @@
         .banners{
           margin-top: 80px;
         }
+        .doctor-mobile{
+          display: block;
+        }
+        .doctor-desk{
+          display: none;
+        }
       }
       @media (min-width: 767px) {
         .fa-bars{
           display: none;
+        }
+        .doctor-mobile{
+          display: none;
+        }
+        .doctor-desk{
+          display: block;
         }
       }
     </style>
@@ -480,7 +492,148 @@
     <!--====== INFETECH TEAM DETAILS PART ENDS ======-->
 
     <section
-      class="team-details-area pt-120 pb-120"
+      class="team-details-area pt-120 pb-120 doctor-mobile"
+      style="background-color: #f3f2fa;padding-top: 0px;"
+    >
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="team-details-content" style="text-align: center;">
+              <h3 class="title">Dr.Arun R. Vadavi</h3>
+              <h4 style="color: #EE0012;">MD</h4>
+              <span>Consultant Diabetologist, Bangalore</span>
+              <img src="assets/doctors-images/R-2 (1).jpg" alt="" />
+              <div class="top-line"></div>
+            </div>
+              <!-- <ul>
+                <li>
+                  <a href="#"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                </li>
+              </ul> -->
+              <h6 style="color: #ee0012;margin-top: 30px;">Present Affiliations:</h6>
+              <div class="projects-details-content" style="padding-top: 0px">
+                <!-- <div class="small-text"> -->
+                <ul>
+                  <li style="margin-top: 10px">
+                    <img src="assets/images/icon/arrow-icon-3.png" alt="" />
+                    Director – <strong>“Sudha” The Prevention Centre</strong>,
+                    Center for Diabetes Care and Post Graduate Training
+                  </li>
+                  <li style="margin-top: 10px">
+                    <img src="assets/images/icon/arrow-icon-3.png" alt="" />
+                    Visiting consultant to
+                    <strong> Sagar Hospitals, Bangalore.</strong>
+                  </li>
+                  <li style="margin-top: 10px">
+                    <img src="assets/images/icon/arrow-icon-3.png" alt="" />
+                    <strong> Post Graduate Teacher in Diabetology</strong> for
+                    <strong> Rajiv Gandhi Health University, Karnataka,</strong>
+                    Certified Post Graduate Courses.
+                  </li>
+                  <li style="margin-top: 10px">
+                    <img src="assets/images/icon/arrow-icon-3.png" alt="" />
+                    <strong>
+                      Regional Faculty for Cleveland Clinic, USA, Certified
+                      Courses in Diabetes.</strong
+                    >
+                  </li>
+                  <li style="margin-top: 10px">
+                    <img src="assets/images/icon/arrow-icon-3.png" alt="" />
+                    <strong>Regional Faculty </strong> for Certification Courses
+                    on Diabetes Care for
+                    <strong> Public Health Foundation of India.</strong>
+                  </li>
+                  <li style="margin-top: 10px">
+                    <img src="assets/images/icon/arrow-icon-3.png" alt="" />
+                    <strong>Regional Faculty</strong> for Certification Courses
+                    on <strong> Gestational Diabetes</strong> for
+                    <strong> Public Health Foundation of India.</strong>
+                  </li>
+                  <li style="margin-top: 10px">
+                    <img src="assets/images/icon/arrow-icon-3.png" alt="" />
+                    <strong>Post Graduate Teacher and Guide </strong> for
+                    Research for
+                    <strong>
+                      DNB Internal Medicine and DNB Family Medicine
+                      Courses.</strong
+                    >
+                  </li>
+                  <li style="margin-top: 10px">
+                    <img src="assets/images/icon/arrow-icon-3.png" alt="" />
+                    <strong> Director, CLUSTER.</strong> (Clinical Updates in
+                    Science, Technology, Education and Research. An organization
+                    for conducting CMEs) <strong>Formerly</strong>
+                  </li>
+                </ul>
+                <!-- </div> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="team-details-thumb">
+            
+            <ul style="list-style: circle; margin-top: 10px;padding-left: 15px;text-align: justify;">
+              <li style="margin-top: 10px">
+                <strong>
+                  Consultant Diabetologist, Apollo Hospitals, Sagar Apollo
+                  Hospitals, Trinity Heart Foundation</strong
+                >
+              </li>
+              <li style="margin-top: 10px">
+                <strong>Post Graduate Teacher for DNB Medicine</strong>
+              </li>
+              <li style="margin-top: 10px">
+                <strong>
+                  Post Graduate Teacher in Diabetology for Rajiv Gandhi Health
+                  University</strong
+                >
+              </li>
+              <li style="margin-top: 10px">
+                <strong>
+                  Regional Faculty for Public Health Foundation of India
+                </strong>
+              </li>
+              <li style="margin-top: 10px">
+                <strong>
+                  Regional Faculty for Courses on Diabetes Care by The Cleveland
+                  Clinics, USA</strong
+                >
+              </li>
+              <li style="margin-top: 10px">
+                <strong>
+                  Faculty Member, American Academy of Continued Medical
+                  Education, USA
+                </strong>
+              </li>
+              <li style="margin-top: 10px">
+                <strong>
+                  Conjoint Faculty to the University of New Castle, Australia
+                </strong>
+              </li>
+              <li style="margin-top: 10px">
+                <strong>
+                  Regional Faculty for Johns Hopkins University, U.S.A.
+                </strong>
+              </li>
+            </ul>
+          </div>
+         
+        </div>
+      </div>
+    </section>
+
+
+    <section
+      class="team-details-area pt-120 pb-120 doctor-desk"
       style="background-color: #f3f2fa"
     >
       <div class="container">
@@ -490,7 +643,7 @@
               <img src="assets/doctors-images/R-2 (1).jpg" alt="" />
               <div class="top-line"></div>
             </div>
-            <ul style="list-style: circle; margin-top: 10px">
+            <ul style="list-style: circle; margin-top: 10px;padding: 20px;">
               <li style="margin-top: 10px">
                 <strong>
                   Consultant Diabetologist, Apollo Hospitals, Sagar Apollo
@@ -845,7 +998,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-about">
-              <a href="#"><img src="assets/logo/logo.jpeg" style="max-width: 250px;border-radius: 10px;" alt="" /></a>
+              <a href="#"><img src="assets/logo/logo.jpeg" style="border-radius: 10px;" alt="" /></a>
               <p>
                 Since 1994, we’ve delivered trusted, comprehensive diabetes
                 care, led by Dr. Arun R Vadavi’s expert team.
