--- a/blog-details.html
+++ b/blog-details.html
@@ -749,7 +749,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <div class="footer-about">
-              <a href="#"><img src="assets/logo/logo.jpeg" style="max-width: 250px;border-radius: 10px;" alt="" /></a>
+              <a href="#"><img src="assets/logo/logo.jpeg" style="border-radius: 10px;" alt="" /></a>
               <p>
                 Since 1994, we’ve delivered trusted, comprehensive diabetes
                 care, led by Dr. Arun R Vadavi’s expert team.
